[package]
name = "bim-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
indicatif = "0.18.4"
lzma-rust2 = { version = "0.16", default-features = false, features = ["std", "xz"] }
sevenz-rust = { version = "0.6", default-features = false }
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
